--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "bankist-node",
   "version": "1.0.0",
   "description": "A demo of a bank app",
-  "main": "app.js",
+  "main": "src/app.ts",
   "scripts": {
+    "dev": "nodemon --exec ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Precious Ibeagi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "express": "^4.19.2",
+    "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2"
+  }
 }
