--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "bcrpyt": "^2.0.0",
     "express": "^4.19.2",
     "typescript": "^5.4.5"
   },
