--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/express": "^4.17.21",
     "bcrpyt": "^2.0.0",
     "express": "^4.19.2",
+    "sequelize": "^6.37.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
+    "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2"
   }
 }
