--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "bcrpyt": "^2.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mysql2": "^3.9.7",
     "sequelize": "^6.37.3",
     "typescript": "^5.4.5"
   },
