create users controller

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrpyt": "^2.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "mysql2": "^3.9.7",
     "sequelize": "^6.37.3",
     "typescript": "^5.4.5"
