--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "chai": "^5.1.0",
+    "mocha": "^10.4.0",
     "nodemon": "^3.1.0",
     "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2"
