--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc && node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Precious Ibeagi",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.6",
     "chai": "^5.1.0",
     "mocha": "^10.4.0",
     "nodemon": "^3.1.0",
