--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,14 @@
     "compilerOptions": {
       "target": "ESNext",
       "module": "commonjs",
+      "rootDir": "./src",
       "outDir": "./dist",
       "strict": true,
       "esModuleInterop": true
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", 
+    "test",
+  ],
   }
   
