--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc && node dist/app.js",
     "dev": "nodemon --exec ts-node src/app.ts",
-    "test": "jest"
+    "test": "vitest"
   },
   "author": "Precious Ibeagi",
   "license": "ISC",
@@ -20,14 +20,9 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.16",
-    "@types/jest": "^29.5.12",
-    "chai": "^5.1.0",
-    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "sequelize-cli": "^6.6.2",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   }
 }
