--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,6 @@
       "esModuleInterop": true
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules", 
-    "test",
-  ],
+    "exclude": [ "node_modules",  "src/tests/**/*", ],
   }
   
