--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
   "name": "bankist-node",
-  "type": "module",
   "version": "1.0.0",
+  "type": "module",
   "description": "A demo of a bank app",
-  "main": "src/app.ts",
+  "main": "src/app.mjs",
   "scripts": {
-    "start": "tsc && node dist/app.js",
-    "dev": "nodemon --exec ts-node src/app.ts",
-    "test": "vitest"
+    "start": "node src/app.mjs",
+    "dev": "nodemon",
+    "test": "NODE_ENV=test mocha --recursive --no-watch"
   },
   "author": "Precious Ibeagi",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
     "bcrpyt": "^2.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "mysql2": "^3.9.7",
+    "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
+    "chai": "^5.1.0",
+    "mocha": "^10.4.0",
     "nodemon": "^3.1.0",
     "sequelize-cli": "^6.6.2",
-    "typescript": "^5.4.5",
-    "vitest": "^1.6.0"
+    "supertest": "^7.0.0"
   }
 }
