--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Precious Ibeagi",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-kms": "^3.569.0",
     "bcrpyt": "^2.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
